# elementary

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  _typos.toml  dev-requirements.txt  elementary.pth  lineage_poc.py  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  supported_adapters.env  tox.ini
.cursor/rules/: docs.mdc
.github/: dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_gap.md  feature_request.md
.github/actions/: test-warehouse.yml
.github/scripts/: bump_packages_version.py
.github/workflows/: assign-devin-prs.yml  build-docker-image.yml  bump-version.yml  ci.yml  cleanup-stale-schemas.yml  close-inactive-issues.yml  close_pylon_issue  close_pylon_issue.yml  create_pylon_issue.yml  dependency-review.yml  draft-release.yml  format-py-code.yml  noa_test.yml  notify_slack.yml  pypi-release.yml  release.yml  remind-docs-and-tests.yml  remind-docs.yml  run-precommit.yml  run-unittest.yml  stale-issues.yml  stale.yml  test-all-warehouses.yml  test-github-action.yml  test-main-warehouse.yml  test-release.yml  test-upgrade-all-warehouses.yml  test-upgrade-warehouse.yml  test-warehouse.yml  test.yml  tests.yml  transfer_profiles.yml  triage-labels.yml  unit-test.yml  update_pylon_issue.yml  validate-upgrades.yml
cli/: cli.py  upgrade.py
clients/: slack.py
clients/api/: api.py
clients/dbt/: dbt_runner.py
clients/gcs/: client.py
clients/s3/: client.py
clients/slack/: client.py  slack_client.py
config/: config.py
docs/: CLAUDE.md  Dockerfile  add-data-monitoring-tests.mdx  alerts.mdx  big-query.mdx  changelog.mdx  cli-install.mdx  code-for-deck.mdx  community-and-support.mdx  connection-profile.mdx  contributions.mdx  culture.mdx  data-and-dbt-tests-report-ui.mdx  data-anomaly-detection.mdx  data-lineage-use-cases.mdx  dbt-artifacts.mdx  dbt-package.mdx  docker-compose.yaml  docs.json  edr-lineage.mdx  faq.mdx  generate-reports.mdx  home.mdx  index.mdx  introduction.mdx  kapa-widget.js  key-features.mdx  lineage-graph.mdx  mint.config.json  mint.json  overview.mdx  quickstart-cli-package.mdx  quickstart-cli.mdx  quickstart-cloud.mdx  quickstart-data-lineage.mdx  quickstart-data-monitoring.mdx  quickstart.mdx  report-ui.mdx  roadmap.mdx  skills.md  (+6 more)
docs/Archive/: quickstart-data-lineage.mdx
docs/_snippets/: add-connection-profile.mdx  ai-generate-test.mdx  column-metrics.mdx  have-question.mdx  install-cli.mdx  install-dbt-package.mdx  products-cards.mdx  quickstart-package-install.mdx  setup-slack-integration.mdx  setup-teams-integration.mdx  support-contact.mdx
docs/best-practices/: detection-and-coverage.mdx  governance-for-observability.mdx  introduction.mdx  triage-and-response.mdx
docs/cloud/: cloud-vs-oss.mdx  elementary-managed.mdx  features.mdx  integrations.mdx  introduction.mdx  main_introduction.mdx  manage-team.mdx  quickstart.mdx  what-is-elementary.mdx
docs/data-lineage/: edr-lineage.mdx  query-history-1.mdx  query-history.mdx
docs/data-monitoring/: add-data-monitoring-tests.mdx  data-and-dbt-tests-report-ui.mdx  data-anomaly-detection.mdx  dbt-artifacts.mdx  elementary-tests-configuration.mdx  monitoring-in-production.mdx  test-configuration.mdx
docs/data-tests/: add-elementary-tests.mdx  anomaly-detection-tests-oss-vs-cloud.mdx  data-anomaly-detection.mdx  data-freshness-sla.mdx  elementary-tests-configuration.mdx  execution-sla.mdx  how-anomaly-detection-works.mdx  introduction.mdx  performance-monitoring.mdx  pii-protection.mdx  python-tests.mdx  test-result-samples.mdx  volume-threshold.mdx  with-context-tests.mdx
docs/dbt/: dbt-artifacts.mdx  on-run-end_hooks.mdx  package-models.mdx
docs/deployment-and-configuration/: collect-dbt-source-frehsness.mdx  collect-dbt-source-freshness.mdx  collect-job-data.mdx  docker.mdx  elementary-in-production.mdx  github-actions.mdx  gitlab-ci.mdx  gitlab.mdx  schemas-and-tables.mdx
docs/features/: automated-monitors.mdx  catalog.mdx  ci.mdx  column-level-lineage.mdx  config-as-code.mdx  data-observability-dashboard.mdx  data-tests.mdx  elementary-alerts.mdx  exposures-lineage.mdx  integrations.mdx  lineage.mdx  multi-env.mdx
elementary/: .prettierignore  elementary_-_2022-09-20_10-43-00_utc.html  elementary_-_2022-09-20_10-44-59_utc.html  elementary_-_2022-09-20_10-47-19_utc.html  elementary_-_2022-09-20_10-50-23_utc.html  elementary_output.json
exceptions/: exceptions.py
frontend/: .eslintignore  .eslintrc  i18next-parser.config.js  index.html  package.json  tsconfig.json  vite.config.ts
integration_tests/: profiles.yml
lineage/: bigquery_query.py  bigquery_query_history.py  cli.py  dbt_models_column_lineage.py  dbt_query.py  dbt_utils.py  empty_graph_helper.py  exceptions.py  lineage_config.py  lineage_graph.py  main.py  query.py  query_context.py  query_history.py  query_history_factory.py  query_history_handler.py  query_history_stats.py  requirements.txt  snowflake_query.py  snowflake_query_history.py  table_resolver.py  tracking.py  utils.py
lineage_fe/: package.json
monitor/: alert.py  alerts.py  cli.py  data_monitoring.py  dbt_runner.py  elementary.html  elementary_output.json  index.html  paths.py  test_result.py
monitoring/: cli.py  config.py  data_monitoring.py  tracking.py
observability/: alerts.py  cli.py  config.py  data_monitoring.py  dbt_runner.py  main.py
scripts/: build-dist.sh  dbt_log_to_elementary_alerts.py  demo.py  generate_fake_query_history.py  generate_report_from_json.py  install_develop.sh  link_local_elementary_dbt_pkg.py  run_dbt_deps.sh  upload_to_pypi.sh  validate_install.sh
static/: config.yml  profiles.yml
tests/: conftest.py  pytest.ini  test_bigquery_query.py  test_lineage_graph.py  test_query.py  test_query_history.py  test_snowflake_query.py  test_snowflake_query_history.py  test_table_resolver.py
tracking/: anonymous_tracking.py  env.py
utils/: anonymous_tracking.py  cli_utils.py  dbt.py  env_vars.py  json_utils.py  log.py  ordered_yaml.py  package.py  thread_spinner.py  time.py  yaml.py
(+4799 files in other folders)
