[tool.poetry]
name = "elementary-data"
version = "0.22.0"
description = "Data monitoring and lineage"
authors = ["Elementary"]
keywords = ["data", "lineage", "data lineage", "data warehouse", "DWH", "observability", "data monitoring", "data observability", "Snowflake", "BigQuery", "Redshift", "data reliability", "analytics engineering"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.elementary-data.com"
repository = "https://github.com/elementary-data/elementary"
documentation = "https://docs.elementary-data.com"
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

packages = [{include = "elementary"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
click = ">=7.0,<9.0"
dbt-core = ">=0.20,<2.0.0"
requests = ">=2.28.1,<3.0.0"
beautifulsoup4 = "<5.0.0"
ratelimit = "*"
posthog = "<3.0.0"
boto3 = "<2.0.0"
google-cloud-storage = ">=2.4,<3.2"
"ruamel.yaml" = "<1.0.0"
alive-progress = "<=2.3.1"
slack-sdk = ">=3.20.1,<4.0.0"

pydantic = "<3.0"
networkx = ">=2.3,<3"
packaging = ">=20.9"
azure-storage-blob = ">=12.11.0"
pymsteams = ">=0.2.2,<1.0.0"
tabulate = ">= 0.9.0"
tenacity = ">=8.0,<10.0"
pytz = ">= 2025.1"

dbt-snowflake = {version = ">=0.20,<2.0.0", optional = true}
dbt-bigquery = {version = ">=0.20,<2.0.0", optional = true}
dbt-redshift = {version = ">=0.20,<2.0.0", optional = true}
dbt-postgres = {version = ">=0.20,<2.0.0", optional = true}
dbt-databricks = {version = ">=0.20,<2.0.0", optional = true}
dbt-spark = {version = ">=0.20,<2.0.0", optional = true}
dbt-athena-community = {version = ">=1.6.3,<2.0.0", optional = true}
dbt-trino = {version = ">=1.5.0,<2.0.0", optional = true}
dbt-clickhouse = {version = ">=0.20,<2.0.0", optional = true}
[tool.poetry.extras]
snowflake = ["dbt-snowflake"]
bigquery = ["dbt-bigquery"]
redshift = ["dbt-redshift"]
postgres = ["dbt-postgres"]
databricks = ["dbt-databricks"]
spark = ["dbt-spark"]
athena = ["dbt-athena-community"]
clickhouse = ["dbt-clickhouse"]
trino = ["dbt-trino"]
all = ["dbt-snowflake", "dbt-bigquery", "dbt-redshift", "dbt-postgres", "dbt-databricks", "dbt-spark", "dbt-clickhouse", "dbt-athena-community", "dbt-trino"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
edr = "elementary.cli.cli:cli"
